/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
syntax
=
"
proto3
"
;
package
proto
;
option
java_package
=
"
org
.
mozilla
.
fenix
.
settings
.
datastore
"
;
option
java_multiple_files
=
true
;
/
/
Represents
the
entire
collection
of
recent
searches
message
RecentSettingsSearches
{
repeated
RecentSettingsSearchItem
items
=
1
;
}
/
/
Represents
a
single
recent
settings
search
item
message
RecentSettingsSearchItem
{
string
preference_key
=
1
;
string
title
=
2
;
string
summary
=
3
;
int32
xml_resource_id
=
4
;
/
/
We
only
need
the
ID
to
reconstruct
the
full
object
}
